# mvviewer

./: CMakeLists.txt  MVViewer.files  MVViewer.pro  MeshMatching.pro  MeshMorphing.pro  PointsToMesh.pro  README  README.MVViewer.txt  README.MeshHOG.txt  README.TMESH.txt  README.md  TransforMesh.files  TransforMesh.pro
.svn/: entries
.svn/text-base/: MVViewer.pro.svn-base  MeshMatching.pro.svn-base  MeshMorphing.pro.svn-base  PointsToMesh.pro.svn-base  README.MeshHOG.txt.svn-base  TransforMesh.pro.svn-base
cmake/modules/: FindQGLViewer.cmake
datasets/.svn/: entries
datasets/dance-1-frame-8552/: cam02.txt  cam04.txt
datasets/dance-1-frame-8552/.svn/: entries
datasets/dance-1-frame-8552/.svn/text-base/: cam00.txt.svn-base  cam01.txt.svn-base  cam03.txt.svn-base  cam05.txt.svn-base  cam06.txt.svn-base  cam07.txt.svn-base  model.off.svn-base  silh_cam01.png.svn-base  silh_cam02.png.svn-base  silh_cam07.png.svn-base
datasets/dinoSparse/: camera0000.txt  camera0003.txt  camera0005.txt  camera0007.txt  camera0009.txt  camera0011.txt  camera0013.txt  camera0014.txt  camera0015.txt  model.off  prepare-EPVH.sh
datasets/dinoSparse/.svn/: entries
datasets/dinoSparse/.svn/text-base/: camera0001.txt.svn-base  camera0002.txt.svn-base  camera0004.txt.svn-base  camera0006.txt.svn-base  camera0008.txt.svn-base  camera0010.txt.svn-base  camera0012.txt.svn-base  (+9 more)
datasets/points/.svn/: entries
datasets/verify/: init.off  plane-two-sided.off  thoruses.off  two-thoruses.off
datasets/verify/.svn/: entries
datasets_matching/.svn/: entries
datasets_matching/dino/: dino_ring_shifted_sparse.coff
datasets_matching/dino/.svn/: entries
datasets_matching/synth_dance/: Mesh-0050.off
datasets_matching/synth_dance/.svn/: entries
matlab/scripts/: area_surface.m  avg_edge.m  baricentric2x.m  bbox.m  demo.m  eigendecomposition.m  invoke_matlab_scalespace.sh  laplacian.m  loaddesc.m  loadfeat.m  loadoff.m  loadvectorfield.m  normalize_scalar_function.m  normalized_gradient.m  radius_area_surface.m  ranks.m  saveoff.m  saveply.m  scalespace.m  script_matlab.m  script_scalespace.m  show_features.m  test.m
scripts/: ZHR2011_dataset_evaluation.sh  apartVectorOff.pl  generate_tables.sh  run_batch_matching_detectors.sh  run_batch_matching_range.sh  run_batch_mesh_scrambler.sh  run_matching.sh  run_matching_dataset.sh  run_operation_scalar_func1_db.sh  show3DVertices.pl
scripts/.svn/: entries
scripts/.svn/text-base/: apartVectorOff.pl.svn-base  run_batch_matching_noise.sh.svn-base  run_matching_dataset.sh.svn-base
src/: CMakeLists.txt
src/.svn/: entries
src/.svn/text-base/: mesh_matching_main.cc.svn-base  mvviewer_main.cc.svn-base
src/CEP/.svn/: entries
src/CEP/intersection/: Triangle_3_Triangle_3.h
src/MVViewer/: BoundingBoxProps.h  BoundingBoxProps.ui  CImg_mod.h  CMakeLists.txt  Camera.h  CurvatureSegmentation.cpp  GeoSegmentation.cpp  MVTransformProps.h  MVTransformProps.ui  MVViewer.cpp  MVViewer.h  MVViewerRendering.h  MVWindow.Qt4.ui  MVWindow.h  RGB.h  Rigide.h  Vector3.h
src/MVViewer/.svn/: entries
src/MVViewer/.svn/text-base/: CImg.h.svn-base  Kernels.h.svn-base  MVData.cpp.svn-base  MVData.h.svn-base  MVTransformProps.h.svn-base  MVWindow.h.svn-base  Matrix3x3.h.svn-base  Matrix3x4.h.svn-base  OpenGLContext.cpp.svn-base  OpenGLContext.h.svn-base  Resample.cpp.svn-base  Resample.h.svn-base
src/MVViewerMain/: CMakeLists.txt  mvviewer_main.cc
src/MeshMatching/: CMakeLists.txt  FeatureGradientHistogram.cpp  FeatureGradientHistogram.h  MeshMatching.cpp  MeshMatching.h  MeshMatchingProperties.Qt4.ui  MeshMatchingWindow.cpp  MeshMatchingWindow.h  mesh_matching_main.cc
src/MeshMatching/.svn/: entries
src/MeshMatching/.svn/text-base/: MeshMatching.h.svn-base
src/MeshMorphing/: CMakeLists.txt  MVAlgVerif.h  MVAlgVerifWindow.cpp  MVAlgVerifWindow.h  morphing_main.cc
src/MeshMorphing/.svn/: entries
src/MeshMorphing/.svn/text-base/: MVAlgVerif.cpp.svn-base  MeshMorphingProperties.Qt4.ui.svn-base
src/PointsToMesh/: PointsToMesh.cpp  PointsToMeshProperties.ui  PointsToMeshWindow.cpp  PointsToMeshWindow.h  points_to_mesh_main.cc
src/PointsToMesh/.svn/: entries
src/TransforMesh/: CMakeLists.txt  CurvatureSegmentation.cpp  CurvatureSegmentation.h  FeatureGradientHistogram.cpp  FeatureGradientHistogram.h  GeoIntegral.h  GeoSegmentation.h  Mesh.cpp  Mesh.h  MeshFacet.h  MeshIntersections.cpp  MeshVertex.h
src/TransforMesh/.svn/: entries
src/Utils/: ColorMap.h
src/Utils/.svn/: entries
src/lib/.svn/: entries
(+15 files in other folders)
